--- a/src/app/components/usuario/usuario-create/usuario-create.component.css
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.css
@@ -43,6 +43,12 @@ mat-form-field.mat-form-field {
     font-size: 13px;
 }
 
+/* cor de fundo e texto do autocomplete do input */
+input:-webkit-autofill, input:-webkit-autofill:focus{
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px #424242 inset;    
+}
+
 .inputId {
     width: 80%;
 }
@@ -61,6 +67,13 @@ mat-form-field.mat-form-field {
 
 .inputEmpresa {
     width: 80%;
+}
+
+.info {
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 12px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -84,114 +97,3 @@ mat-form-field.mat-form-field {
         margin: 3px;
     }
 }
-
-/* .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    padding: 25px;
-}
-
-.formulario {
-    display: grid;
-    width: 90vw;
-    margin: 10px;
-    justify-content: center;
-    align-content: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 12vh 12vh;
-    grid-template-areas: "usuario usuario"
-                         "email email";
-}
-
-.formulario > main {
-    grid-area: usuario;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.formulario > footer {
-    grid-area: email;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.botoes {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-}
-
-.botaoSalvar {
-    background-color: #9FC5F8;
-    color: #333;
-    margin-right: 10px;
-    width: 8rem;    
-}
-
-.botaoCancelar {
-    background-color: #e35e6b;
-    width: 8rem;
-}
-
-.textButton{
-    margin-left: 5px;
-}
-
-mat-form-field.mat-form-field {
-    font-size: 13px;
-}
-
-.inputId {
-    width: 90%;
-}
-
-.inputNome {
-    width: 90%;
-}
-
-.inputSenha  {
-    width: 90%;
-}
-
-.inputEmpresaId {
-    width: 90%;
-}
-
-.inputEmpresa {
-    width: 90%;
-}
-
-@media only screen and (max-width: 500px) {
-    .formulario {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;    
-        width: 50vw;
-        margin-top: 10px;
-    }
-
-    .botoes {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50vw;        
-    }
-
-    .botaoSalvar {
-        background-color: #9FC5F8;
-        color: #333;
-        width: 80%; 
-        margin: 3px;
-    }
-
-    .botaoCancelar {
-        background-color: #e35e6b;
-        width: 80%;
-        margin: 3px;
-    }
-} */
