--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -22,6 +22,7 @@
             <mat-label>Empresa</mat-label>
             <input matInput [(ngModel)]="usuario.empresa" name="empresa" required>
         </mat-form-field>
+        <span class="info">(*) preenchimento obrigatório</span>
     </form>
     <div class="botoes">
         <button class="botaoSalvar" mat-raised-button (click)="createUsuario()">
