--- a/src/app/components/usuario/usuario-delete/usuario-delete.component.css
+++ b/src/app/components/usuario/usuario-delete/usuario-delete.component.css
@@ -42,6 +42,12 @@ mat-form-field.mat-form-field {
     font-size: 13px;
 }
 
+/* cor de fundo e texto do autocomplete do input */
+input:-webkit-autofill, input:-webkit-autofill:focus{
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px #424242 inset;    
+}
+
 .inputId {
     width: 80%;
 }
