--- a/src/app/components/usuario/usuario-update/usuario-update.component.css
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.css
@@ -42,6 +42,12 @@ mat-form-field.mat-form-field {
     font-size: 13px;
 }
 
+/* cor de fundo e texto do autocomplete do input */
+input:-webkit-autofill, input:-webkit-autofill:focus{
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px #424242 inset;    
+}
+
 .inputId {
     width: 80%;
 }
@@ -60,6 +66,13 @@ mat-form-field.mat-form-field {
 
 .inputEmpresa {
     width: 80%;
+}
+
+.info {
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 12px;
 }
 
 @media only screen and (max-width: 500px) {
