Correção dos textos das mensagens

--- a/src/app/components/views/login/login.component.html
+++ b/src/app/components/views/login/login.component.html
@@ -12,7 +12,7 @@
                 <input type="text" id="username" name="username" [(ngModel)]="model.username" />
             </div>
             <div class="input-block">
-                <label for="login-password">Password</label>
+                <label for="login-password">Senha</label>
                 <input type="password" id="pasword" name="password" [(ngModel)]="model.password" />
             </div>
             <div class="botoes">
