Criação de Menu Principal provisório

--- a/src/app/components/template/menu-button/menu-button.component.html
+++ b/src/app/components/template/menu-button/menu-button.component.html
@@ -6,7 +6,7 @@
 <mat-menu #menu="matMenu" class="menu-buttons">
     <button mat-menu-item (click)="navigateToHome()">
         <mat-icon class="color-icon">home</mat-icon>
-        <span class="text-menu">Home</span>
+        <span class="text-menu">Menu Principal</span>
     </button>
     <button mat-menu-item (click)="navigateToManterUsuarios()">
         <mat-icon class="color-icon">account_circle</mat-icon>
