--- a/src/app/components/views/home/home.component.css
+++ b/src/app/components/views/home/home.component.css
@@ -1,6 +1,5 @@
 .container{
     background-color: #555; 
-
 }
 .titulo {
     color: #fff;
@@ -10,5 +9,35 @@
 } 
 
 mat-grid-tile {
-    background: lightblue;
+    /* background: lightblue; */
+    padding: 0px;
+    margin: 0px;
 }
+
+button {
+    display: flex;
+    flex-direction: column;  
+    justify-content: center;
+    align-items: center; 
+    width: 100%;
+    height: 100%;
+    background-color: #555;
+    border-radius: 10px;
+    /* margin: 0px 5px 5px 0px; */
+}
+
+.text-menu {
+    color: #fff;
+    font-size: 20px;
+}
+
+.color-icon{
+    color: #B6D7A8;
+    
+}
+
+mat-icon {
+    font-size: 50px;
+    padding: 20px;
+}
+
