--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,30 +1,34 @@
 <app-header></app-header>
 <div class="container">
-    <h1 class="titulo"> HOME</h1>
+    <h1 class="titulo">Menu Principal</h1>
 </div>
-<!-- <mat-grid-list cols="2" rowHeight="40vh">
+<mat-grid-list cols="2" rowHeight="33vh">
     <mat-grid-tile>
-        <a routerLink="/manter_usuarios">
-            <mat-icon class="color-icon">account_circle</mat-icon>
-            <span class="text-menu">Manter Usuários</span>
-        </a>
+        <button mat-menu-item (click)="navigateToManterUsuarios()">
+            <div class="icone">
+                <mat-icon class="color-icon">account_circle</mat-icon>
+            </div>
+            <div class="texto">
+                <span class="text-menu">Manter Usuários</span>
+            </div>
+        </button>
     </mat-grid-tile>
     <mat-grid-tile>
-        <a routerLink="/manter_veiculos">
+        <button mat-menu-item (click)="navigateToManterVeiculos()">
             <mat-icon class="color-icon">commute</mat-icon>
             <span class="text-menu">Manter Veículos</span>
-        </a>
+        </button>
     </mat-grid-tile>
     <mat-grid-tile>
-        <a routerLink="/manter_equipamentos">
+        <button mat-menu-item (click)="navigateToManterEquipamentos()">
             <mat-icon class="color-icon">developer_board</mat-icon>
             <span class="text-menu">Manter Equipamentos</span>
-        </a>
+        </button>
     </mat-grid-tile>
     <mat-grid-tile>
-        <a routerLink="/mostrar_nivel_lotacao">
+        <button mat-menu-item (click)="navigateToMostrarNivelLotacao()">
             <mat-icon class="color-icon">visibility</mat-icon>
             <span class="text-menu">Mostrar Nível de Lotação</span>
-        </a>
+        </button>
     </mat-grid-tile>
-</mat-grid-list> -->
+</mat-grid-list>
