inicio do CRUD de veículos

--- a/src/app/components/views/manter-veiculos/manter-veiculos.component.html
+++ b/src/app/components/views/manter-veiculos/manter-veiculos.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <div class="container">
     <h1 class="titulo"> MANTER VEÍCULOS</h1>
+    <app-veiculo-read></app-veiculo-read>
 </div>
