--- a/src/app/views/manter-veiculos/manter-veiculos.component.html
+++ b/src/app/views/manter-veiculos/manter-veiculos.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <div class="container">
-    <h1 class="titulo"> MANTER VEÍCULOS</h1>
+    <h1 class="titulo">VEÍCULOS</h1>
+</div>
+<div class="body">
     <app-veiculo-read></app-veiculo-read>
 </div>
