--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -1,1 +1,114 @@
-<p>veiculo-read works!</p>
+<div>
+    <div class="botoes">
+        <div class="botoes1">
+            <button mat-raised-button (click)="listarTodosUsuarios()">
+                <mat-icon class="color-icon">list</mat-icon>
+                Listar Veículos
+            </button>
+
+
+            <button mat-raised-button (click)="navigateToNovoVeiculo()">
+                <mat-icon class="color-icon">commute</mat-icon>
+                Novo Veículo
+            </button>
+
+
+
+        </div>
+        <div class="botoes2">
+            <button mat-raised-button (click)="listarUsuariosFiltro()">
+                <mat-icon class="color-icon">search</mat-icon>
+                Filtrar
+            </button>
+            <mat-form-field appearance="outline" color="accent">
+                <mat-label>Filtrar por veículo</mat-label>
+                <input matInput [(ngModel)]="filter" name="filter">
+            </mat-form-field>
+        </div>
+    </div>
+
+    <table mat-table [dataSource]="usuarios.content" class="mat-elevation-z4">
+        <!-- id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>ID</th>
+            <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        </ng-container>
+
+        <!-- numeroLinha Column -->
+        <ng-container matColumnDef="numeroLinha">
+            <th mat-header-cell *matHeaderCellDef>Linha</th>
+            <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+        </ng-container>
+
+        <!-- modeloVeiculo Column -->
+        <ng-container matColumnDef="modeloVeiculo">
+            <th mat-header-cell *matHeaderCellDef>Modelo</th>
+            <td mat-cell *matCellDef="let row">{{row.senha}}</td>
+        </ng-container>
+
+        <!-- placaVeiculo Column -->
+        <ng-container matColumnDef="placaVeiculo">
+            <th mat-header-cell *matHeaderCellDef>Placa</th>
+            <td mat-cell *matCellDef="let row">{{row.senha}}</td>
+        </ng-container>
+
+        <!-- empresaId Column -->
+        <ng-container matColumnDef="empresaId">
+            <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
+            <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
+        </ng-container>
+
+        <!-- empresa Column -->
+        <ng-container matColumnDef="empresa">
+            <th mat-header-cell *matHeaderCellDef>Empresa</th>
+            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+        </ng-container>
+
+        <!-- totalLugares Column -->
+        <ng-container matColumnDef="totalLugares">
+            <th mat-header-cell *matHeaderCellDef>Total de Lugares</th>
+            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+        </ng-container>
+
+        <!-- lugaresSentados Column -->
+        <ng-container matColumnDef="lugaresSentados">
+            <th mat-header-cell *matHeaderCellDef>Sentados</th>
+            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+        </ng-container>
+
+        <!-- lugaresEmPe Column -->
+        <ng-container matColumnDef="lugaresEmPe">
+            <th mat-header-cell *matHeaderCellDef>Em Pé</th>
+            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+        </ng-container>
+
+        <!-- codEquipamento Column -->
+        <ng-container matColumnDef="codEquipamento">
+            <th mat-header-cell *matHeaderCellDef>Cód. Equip.</th>
+            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+        </ng-container>
+
+        <!-- Action Column -->
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Ações</th>
+            <td mat-cell *matCellDef="let row">
+                <a routerLink="/veiculos/update/{{ row.id }}" class="update">
+                    <i class="material-icons">
+                        edit
+                    </i>
+                </a>
+                <a routerLink="/veiculos/delete/{{ row.id }}" class="delete">
+                    <i class="material-icons">
+                        delete
+                    </i>
+                </a>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage"
+        [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
+
+</div>
