--- a/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
+++ b/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
@@ -1,2 +1,65 @@
 <app-header></app-header>
-<p>Cadastrar Veiculo</p>
+<mat-card class="container">
+    <mat-card-title>Cadastrar Veículo</mat-card-title>
+    <form class="formulario">
+        <span class="info">(*) preenchimento obrigatório</span>
+
+        <mat-form-field class="inputPlaca" appearance="outline" color="accent">
+            <mat-label>Placa</mat-label>
+            <input matInput [(ngModel)]="veiculo.placaVeiculo" name="placaVeiculo" required>
+        </mat-form-field>
+
+        <mat-form-field class="inputModelo" appearance="outline" color="accent">
+            <mat-label>Modelo</mat-label>
+            <input matInput [(ngModel)]="veiculo.modeloVeiculo" name="modeloVeiculo" required>
+        </mat-form-field>
+
+        <mat-form-field class="inputLinha" appearance="outline" color="accent">
+            <mat-label>Nº da Linha</mat-label>
+            <input matInput [(ngModel)]="veiculo.numeroLinha" name="numeroLinha" >
+        </mat-form-field>
+
+        <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
+            <mat-label>Empresa ID</mat-label>
+            <input type="number" matInput [(ngModel)]="veiculo.empresaID" name="empresaID" required>
+        </mat-form-field>
+
+        <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
+            <mat-label>Empresa</mat-label>
+            <input matInput [(ngModel)]="veiculo.empresa" name="empresa" required>
+        </mat-form-field>
+
+        <mat-form-field class="inputTotalLugares" appearance="outline" color="accent">
+            <mat-label>Total de Lugares</mat-label>
+            <input type="number" min="0" matInput [(ngModel)]="veiculo.totalLugares" 
+            (change)="calculaLugaresEmPe()" name="totalLugares" required>
+        </mat-form-field>
+
+        <mat-form-field class="inputLugaresSentados" appearance="outline" color="accent">
+            <mat-label>Lugares Sentados</mat-label>
+            <input type="number" min="0" matInput [(ngModel)]="veiculo.lugaresSentado" 
+            (change)="calculaLugaresEmPe()" name="lugaresSentado" required>
+        </mat-form-field>
+
+        <mat-form-field class="inputLugaresEmPe" appearance="outline" color="accent">
+            <mat-label>Lugares em Pé</mat-label>
+            <input type="number" min="0" matInput [value]="veiculo.lugaresEmPe" name="lugaresEmPe" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
+            <mat-label>Cód. Equipamento</mat-label>
+            <input type="number" matInput [(ngModel)]="veiculo.codEquipamento" name="codEquipamento" >
+        </mat-form-field>
+
+    </form>
+    <div class="botoes">
+        <button class="botaoSalvar" mat-raised-button (click)="createVeiculo()">
+            <mat-icon>save</mat-icon>
+            <span class="textButton">Salvar</span>
+        </button>
+        <button class="botaoCancelar" mat-raised-button (click)="cancel()">
+            <mat-icon>close</mat-icon>
+            <span class="textButton">Cancelar</span>
+        </button>
+    </div>
+</mat-card>
