--- a/src/app/components/veiculo/veiculo-delete/veiculo-delete.component.html
+++ b/src/app/components/veiculo/veiculo-delete/veiculo-delete.component.html
@@ -1,2 +1,69 @@
 <app-header></app-header>
-<p>Excluir Veiculo</p>
+<mat-card class="container">
+    <mat-card-title>Excluir Veículo</mat-card-title>
+    <form class="formulario">
+
+        <mat-form-field class="inputId" appearance="outline" color="accent">
+            <mat-label>Id</mat-label>
+            <input type="number" matInput [value]="veiculo.id" name="id" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputPlaca" appearance="outline" color="accent">
+            <mat-label>Placa</mat-label>
+            <input matInput [(ngModel)]="veiculo.placaVeiculo" name="placaVeiculo" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputModelo" appearance="outline" color="accent">
+            <mat-label>Modelo</mat-label>
+            <input matInput [(ngModel)]="veiculo.modeloVeiculo" name="modeloVeiculo" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputLinha" appearance="outline" color="accent">
+            <mat-label>Nº da Linha</mat-label>
+            <input matInput [(ngModel)]="veiculo.numeroLinha" name="numeroLinha" disabled >
+        </mat-form-field>
+
+        <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
+            <mat-label>Empresa ID</mat-label>
+            <input type="number" matInput [(ngModel)]="veiculo.empresaID" name="empresaID" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
+            <mat-label>Empresa</mat-label>
+            <input matInput [(ngModel)]="veiculo.empresa" name="empresa" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputTotalLugares" appearance="outline" color="accent">
+            <mat-label>Total de Lugares</mat-label>
+            <input type="number" min="0" matInput [(ngModel)]="veiculo.totalLugares" 
+            name="totalLugares" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputLugaresSentados" appearance="outline" color="accent">
+            <mat-label>Lugares Sentados</mat-label>
+            <input type="number" min="0" matInput [(ngModel)]="veiculo.lugaresSentado" 
+            name="lugaresSentado" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputLugaresEmPe" appearance="outline" color="accent">
+            <mat-label>Lugares em Pé</mat-label>
+            <input type="number" min="0" matInput [value]="veiculo.lugaresEmPe" name="lugaresEmPe" disabled>
+        </mat-form-field>
+
+        <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
+            <mat-label>Cód. Equipamento</mat-label>
+            <input type="number" matInput [(ngModel)]="veiculo.codEquipamento" name="codEquipamento" disabled >
+        </mat-form-field>
+
+    </form>
+    <div class="botoes">
+        <button class="botaoSalvar" mat-raised-button (click)="deleteVeiculo()">
+            <mat-icon>delete</mat-icon>
+            <span class="textButton">Excluir</span>
+        </button>
+        <button class="botaoCancelar" mat-raised-button (click)="cancel()">
+            <mat-icon>close</mat-icon>
+            <span class="textButton">Cancelar</span>
+        </button>
+    </div>
+</mat-card>
