--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -6,6 +6,9 @@
         <div class="tituloPequeno">
             S.I.L.O.
         </div>
+        <div class="usuarioLogado">
+            <span>Olá, {{userName}} </span>
+        </div>
         <div class="menu-button">
             <app-menu-button></app-menu-button>
         </div>
