Telas CRUD Veiculo OK + user logado no Header

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -7,7 +7,7 @@
             S.I.L.O.
         </div>
         <div class="usuarioLogado">
-            <span>Olá, {{userName}} </span>
+            <span >Olá, {{userName| titlecase}}</span>
         </div>
         <div class="menu-button">
             <app-menu-button></app-menu-button>
