--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -5,12 +5,12 @@
             <!-- <button mat-raised-button (click)="listarTodosUsuarios()"> -->
             <button mat-raised-button (click)="listarTodosVeiculos()">
                 <mat-icon class="color-icon">list</mat-icon>
-                Listar Veículos
+                <span class="textButton"> Listar Veículos</span>
             </button>
 
             <button mat-raised-button (click)="navigateToNovoVeiculo()">
                 <mat-icon class="color-icon">commute</mat-icon>
-                Novo Veículo
+                <span class="textButton"> Novo Veículo</span>
             </button>
 
         </div>
@@ -18,7 +18,7 @@
             <!-- <button mat-raised-button (click)="listarUsuariosFiltro()"> -->
             <button mat-raised-button (click)="listarVeiculosFiltro()">
                 <mat-icon class="color-icon">search</mat-icon>
-                Filtrar
+                <span class="textButtonFilter"> Filtrar</span>
             </button>
             <mat-form-field appearance="outline" color="accent">
                 <mat-label>Filtrar por placa</mat-label>
