--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -35,7 +35,7 @@
     margin-right: 10px;
 }
 
-@media only screen and (max-width: 719px) {
+@media only screen and (max-width: 819px) {
     .toolbar {
         flex-direction: column;
         padding: 0px;
@@ -49,6 +49,10 @@
     .menu-button{
         flex-direction: column;
         justify-content: center;
+    }
+
+    .usuarioLogado {
+        font-size: 15px;
     }
  }
  @media only screen and (max-width: 500px) {
