--- a/src/app/components/veiculo/veiculo-create/veiculo-create.component.css
+++ b/src/app/components/veiculo/veiculo-create/veiculo-create.component.css
@@ -113,4 +113,11 @@ input:-webkit-autofill, input:-webkit-autofill:focus{
         width: 80%;
         margin: 3px;
     }
+
+    .info {
+        width: 80%;
+        display: flex;
+        justify-content: flex-end;
+        font-size: 10px;        
+    }
 }
