--- a/src/app/views/manter-equipamentos/manter-equipamentos.component.css
+++ b/src/app/views/manter-equipamentos/manter-equipamentos.component.css
@@ -8,3 +8,9 @@
     text-align: center;
     padding: 25px;
 }
+
+@media only screen and (max-width: 819px) {
+    .titulo {
+        font-size: 15px;
+    }
+}
