--- a/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
+++ b/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
@@ -21,7 +21,7 @@
 
         <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="veiculo.empresaID" name="empresaID" required>
+            <input type="number" matInput [(ngModel)]="veiculo.empresaId" name="empresaId" required>
         </mat-form-field>
 
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
@@ -32,13 +32,13 @@
         <mat-form-field class="inputTotalLugares" appearance="outline" color="accent">
             <mat-label>Total de Lugares</mat-label>
             <input type="number" min="0" matInput [(ngModel)]="veiculo.totalLugares" 
-            (change)="calculaLugaresEmPe()" name="totalLugares" required>
+            (change)="calculaLugaresEmPe()" name="totalLugares" >
         </mat-form-field>
 
         <mat-form-field class="inputLugaresSentados" appearance="outline" color="accent">
             <mat-label>Lugares Sentados</mat-label>
             <input type="number" min="0" matInput [(ngModel)]="veiculo.lugaresSentado" 
-            (change)="calculaLugaresEmPe()" name="lugaresSentado" required>
+            (change)="calculaLugaresEmPe()" name="lugaresSentado" >
         </mat-form-field>
 
         <mat-form-field class="inputLugaresEmPe" appearance="outline" color="accent">
