--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -27,7 +27,6 @@
         </div>
     </div>
 
-    <!-- <table mat-table [dataSource]="usuarios.content" class="mat-elevation-z4"> -->
     <table mat-table [dataSource]="veiculos.content" class="mat-elevation-z4">
         <!-- id Column -->
         <ng-container matColumnDef="id">
@@ -38,29 +37,26 @@
         <!-- placaVeiculo Column -->
         <ng-container matColumnDef="placaVeiculo">
             <th mat-header-cell *matHeaderCellDef>Placa</th>
-            <!-- <td mat-cell *matCellDef="let row">{{row.senha}}</td> -->
         <td mat-cell *matCellDef="let row">{{row.placaVeiculo}}</td>
         </ng-container>
 
         <!-- modeloVeiculo Column -->
         <ng-container matColumnDef="modeloVeiculo">
             <th mat-header-cell *matHeaderCellDef>Modelo</th>
-            <!-- <td mat-cell *matCellDef="let row">{{row.senha}}</td> -->
             <td mat-cell *matCellDef="let row">{{row.modeloVeiculo}}</td>
         </ng-container>
 
         <!-- numeroLinha Column -->
         <ng-container matColumnDef="numeroLinha">
             <th mat-header-cell *matHeaderCellDef>Linha</th>
-            <!-- <td mat-cell *matCellDef="let row">{{row.nome}}</td> -->
         <td mat-cell *matCellDef="let row">{{row.numeroLinha}}</td>
         </ng-container>
 
         <!-- empresaId Column -->
-        <ng-container matColumnDef="empresaId">
+        <!-- <ng-container matColumnDef="empresaId">
             <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
             <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- empresa Column -->
         <ng-container matColumnDef="empresa">
@@ -71,28 +67,24 @@
         <!-- totalLugares Column -->
         <ng-container matColumnDef="totalLugares">
             <th mat-header-cell *matHeaderCellDef>Total de Lugares</th>
-            <!-- <td mat-cell *matCellDef="let row">{{row.empresa}}</td> -->
         <td mat-cell *matCellDef="let row">{{row.totalLugares}}</td>
         </ng-container>
 
         <!-- lugaresSentados Column -->
-        <ng-container matColumnDef="lugaresSentados">
+        <ng-container matColumnDef="lugaresSentado">
             <th mat-header-cell *matHeaderCellDef>Sentados</th>
-            <!-- <td mat-cell *matCellDef="let row">{{row.empresa}}</td> -->
-        <td mat-cell *matCellDef="let row">{{row.lugaresSentados}}</td>
+        <td mat-cell *matCellDef="let row">{{row.lugaresSentado}}</td>
         </ng-container>
 
         <!-- lugaresEmPe Column -->
         <ng-container matColumnDef="lugaresEmPe">
             <th mat-header-cell *matHeaderCellDef>Em Pé</th>
-            <!-- <td mat-cell *matCellDef="let row">{{row.empresa}}</td> -->
         <td mat-cell *matCellDef="let row">{{row.lugaresEmPe}}</td>
         </ng-container>
 
         <!-- codEquipamento Column -->
         <ng-container matColumnDef="codEquipamento">
             <th mat-header-cell *matHeaderCellDef>Cód. Equip.</th>
-            <!-- <td mat-cell *matCellDef="let row">{{row.empresa}}</td> -->
         <td mat-cell *matCellDef="let row">{{row.codEquipamento}}</td>
         </ng-container>
 
