--- a/src/app/components/veiculo/veiculo-update/veiculo-update.component.html
+++ b/src/app/components/veiculo/veiculo-update/veiculo-update.component.html
@@ -26,7 +26,7 @@
 
         <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="veiculo.empresaID" name="empresaID" >
+            <input type="number" matInput [(ngModel)]="veiculo.empresaId" name="empresaId" >
         </mat-form-field>
 
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
