--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -26,10 +26,10 @@
 
   <table mat-table [dataSource]="usuarios.content" class="mat-elevation-z4">
     <!-- id Column -->
-    <ng-container matColumnDef="id">
+    <!-- <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
+    </ng-container> -->
 
     <!-- nome Column -->
     <ng-container matColumnDef="nome">
@@ -44,10 +44,10 @@
     </ng-container>
 
     <!-- empresaId Column -->
-    <ng-container matColumnDef="empresaId">
+    <!-- <ng-container matColumnDef="empresaId">
       <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
       <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
-    </ng-container>
+    </ng-container> -->
 
     <!-- empresa Column -->
     <ng-container matColumnDef="empresa">
