--- a/src/app/components/usuario/usuario-update/usuario-update.component.html
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.html
@@ -3,10 +3,10 @@
     <mat-card-title>Atualizar usuário</mat-card-title>
     <form class="formulario">
         <span class="info">(*) preenchimento obrigatório</span>
-        <mat-form-field class="inputId" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputId" appearance="outline" color="accent">
             <mat-label>Id</mat-label>
             <input type="number" matInput [(ngModel)]="usuario.id" name="id" disabled>
-        </mat-form-field>
+        </mat-form-field> -->
         <mat-form-field class="inputNome" appearance="outline" color="accent">
             <mat-label>Nome (usuário)</mat-label>
             <input matInput [(ngModel)]="usuario.nome" name="nome" required>
