--- a/src/app/components/veiculo/veiculo-delete/veiculo-delete.component.html
+++ b/src/app/components/veiculo/veiculo-delete/veiculo-delete.component.html
@@ -3,10 +3,10 @@
     <mat-card-title>Excluir Veículo</mat-card-title>
     <form class="formulario">
 
-        <mat-form-field class="inputId" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputId" appearance="outline" color="accent">
             <mat-label>Id</mat-label>
             <input type="number" matInput [value]="veiculo.id" name="id" disabled>
-        </mat-form-field>
+        </mat-form-field> -->
 
         <mat-form-field class="inputPlaca" appearance="outline" color="accent">
             <mat-label>Placa</mat-label>
@@ -23,7 +23,7 @@
             <input matInput [(ngModel)]="veiculo.numeroLinha" name="numeroLinha" disabled >
         </mat-form-field>
 
-        <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
             <input type="number" matInput [(ngModel)]="veiculo.empresaId" name="empresaId" disabled>
         </mat-form-field>
@@ -31,7 +31,7 @@
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <input matInput [(ngModel)]="veiculo.empresa" name="empresa" disabled>
-        </mat-form-field>
+        </mat-form-field> -->
 
         <mat-form-field class="inputTotalLugares" appearance="outline" color="accent">
             <mat-label>Total de Lugares</mat-label>
