--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -29,10 +29,10 @@
 
     <table mat-table [dataSource]="veiculos.content" class="mat-elevation-z4">
         <!-- id Column -->
-        <ng-container matColumnDef="id">
+        <!-- <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>ID</th>
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- placaVeiculo Column -->
         <ng-container matColumnDef="placaVeiculo">
@@ -59,10 +59,10 @@
         </ng-container> -->
 
         <!-- empresa Column -->
-        <ng-container matColumnDef="empresa">
+        <!-- <ng-container matColumnDef="empresa">
             <th mat-header-cell *matHeaderCellDef>Empresa</th>
             <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- totalLugares Column -->
         <ng-container matColumnDef="totalLugares">
