--- a/src/app/components/veiculo/veiculo-update/veiculo-update.component.html
+++ b/src/app/components/veiculo/veiculo-update/veiculo-update.component.html
@@ -4,10 +4,10 @@
     <form class="formulario">
         <!-- <span class="info">(*) preenchimento obrigatório</span> -->
 
-        <mat-form-field class="inputId" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputId" appearance="outline" color="accent">
             <mat-label>Id</mat-label>
             <input type="number" matInput [value]="veiculo.id" name="id" disabled>
-        </mat-form-field>
+        </mat-form-field> -->
         
         <mat-form-field class="inputPlaca" appearance="outline" color="accent">
             <mat-label>Placa</mat-label>
@@ -24,7 +24,7 @@
             <input matInput [(ngModel)]="veiculo.numeroLinha" name="numeroLinha" >
         </mat-form-field>
 
-        <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
             <input type="number" matInput [(ngModel)]="veiculo.empresaId" name="empresaId" >
         </mat-form-field>
@@ -32,18 +32,18 @@
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <input matInput [(ngModel)]="veiculo.empresa" name="empresa" >
-        </mat-form-field>
+        </mat-form-field> -->
 
         <mat-form-field class="inputTotalLugares" appearance="outline" color="accent">
             <mat-label>Total de Lugares</mat-label>
             <input type="number" min="0" matInput [(ngModel)]="veiculo.totalLugares" 
-            (change)="calculaLugaresEmPe()" name="totalLugares" >
+            (change)="calculaLugaresEmPe()" name="totalLugares" required>
         </mat-form-field>
 
         <mat-form-field class="inputLugaresSentados" appearance="outline" color="accent">
             <mat-label>Lugares Sentados</mat-label>
             <input type="number" min="0" matInput [(ngModel)]="veiculo.lugaresSentado" 
-            (change)="calculaLugaresEmPe()" name="lugaresSentado" >
+            (change)="calculaLugaresEmPe()" name="lugaresSentado" required >
         </mat-form-field>
 
         <mat-form-field class="inputLugaresEmPe" appearance="outline" color="accent">
