--- a/src/app/components/usuario/usuario-update/usuario-update.component.css
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.css
@@ -40,6 +40,20 @@
 
 mat-form-field.mat-form-field {
     font-size: 13px;
+    width: 80%;
+}
+
+select {
+    color: white;
+}
+
+select:hover {
+    background-color: #555;
+    color: white;
+}
+
+select option {
+    color: black;
 }
 
 /* cor de fundo e texto do autocomplete do input */
@@ -104,114 +118,3 @@ input:-webkit-autofill, input:-webkit-autofill:focus{
         
     }
 }
-
-/* .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    padding: 25px;
-}
-
-.formulario {
-    display: grid;
-    width: 90vw;
-    margin: 10px;
-    justify-content: center;
-    align-content: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 12vh 12vh;
-    grid-template-areas: "usuario usuario"
-                         "email email";
-}
-
-.formulario > main {
-    grid-area: usuario;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.formulario > footer {
-    grid-area: email;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.botoes {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-}
-
-.botaoSalvar {
-    background-color: #9FC5F8;
-    color: #333;
-    margin-right: 10px;
-    width: 8rem;    
-}
-
-.botaoCancelar {
-    background-color: #e35e6b;
-    width: 8rem;
-}
-
-.textButton{
-    margin-left: 5px;
-}
-
-mat-form-field.mat-form-field {
-    font-size: 13px;
-}
-
-.inputId {
-    width: 90%;
-}
-
-.inputNome {
-    width: 90%;
-}
-
-.inputSenha  {
-    width: 90%;
-}
-
-.inputEmpresaId {
-    width: 90%;
-}
-
-.inputEmpresa {
-    width: 90%;
-}
-
-@media only screen and (max-width: 500px) {
-    .formulario {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;    
-        width: 50vw;
-        margin-top: 10px;
-    }
-
-    .botoes {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50vw;        
-    }
-
-    .botaoSalvar {
-        background-color: #9FC5F8;
-        color: #333;
-        width: 80%; 
-        margin: 3px;
-    }
-
-    .botaoCancelar {
-        background-color: #e35e6b;
-        width: 80%;
-        margin: 3px;
-    }
-} */
