--- a/src/app/components/usuario/usuario-update/usuario-update.component.html
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.html
@@ -19,13 +19,23 @@
             <mat-label>Confirmação Senha</mat-label>
             <input type="password" matInput [(ngModel)]="senhaCheck" name="senha" >
         </mat-form-field>
-        <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
             <input type="number" matInput [(ngModel)]="usuario.empresaId" name="empresaId" required>
         </mat-form-field>
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <input matInput [(ngModel)]="usuario.empresa" name="empresa" required>
+        </mat-form-field> -->
+
+        <mat-form-field appearance="outline" color="accent">
+            <mat-label>Empresa</mat-label>
+            <select matNativeControl [(ngModel)]="selectedEmpresa" name="empresa" required>
+                <option value="" selected></option>
+                <option *ngFor="let empresa of empresas" [value]="empresa.value">
+                    {{empresa.viewValue}}
+                </option>
+            </select>
         </mat-form-field>
         
     </form>
