Correção de mensagens de erro

--- a/src/app/components/veiculo/veiculo-create/veiculo-create.component.css
+++ b/src/app/components/veiculo/veiculo-create/veiculo-create.component.css
@@ -65,13 +65,13 @@ input:-webkit-autofill, input:-webkit-autofill:focus{
     width: 80%;
 }
 
-.inputEmpresaID {
+/* .inputEmpresaID {
     width: 80%;
 }
 
 .inputEmpresa {
     width: 80%;
-}
+} */
 
 .inputTotalLugares {
     width: 80%;
