--- a/src/app/views/manter-equipamentos/manter-equipamentos.component.html
+++ b/src/app/views/manter-equipamentos/manter-equipamentos.component.html
@@ -2,3 +2,6 @@
 <div class="container">
     <h1 class="titulo"> MANTER EQUIPAMENTOS</h1>
 </div>
+<div class="body">
+    <app-equipamento-read></app-equipamento-read>
+</div>
