--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -7,7 +7,9 @@
             S.I.L.O.
         </div>
         <div class="usuarioLogado">
-            <span >Olá, {{userName| titlecase}}</span>
+            <!-- <span >Olá, {{userName| titlecase}}</span> -->
+            <mat-icon class="icon">account_circle</mat-icon>
+            <span> {{userName| titlecase}}</span>
         </div>
         <div class="menu-button">
             <app-menu-button></app-menu-button>
