--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <table mat-table [dataSource]="veiculos.content" class="mat-elevation-z4">
+    <table mat-table [dataSource]="veiculos2.content" class="mat-elevation-z4">
         <!-- id Column -->
         <!-- <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>ID</th>
@@ -53,10 +53,10 @@
         </ng-container>
 
         <!-- empresaId Column -->
-        <!-- <ng-container matColumnDef="empresaId">
+        <ng-container matColumnDef="empresaId">
             <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
             <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
-        </ng-container> -->
+        </ng-container>
 
         <!-- empresa Column -->
         <!-- <ng-container matColumnDef="empresa">
@@ -112,3 +112,17 @@
         [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
 
 </div>
+
+<!-- Exemplo de como inserir conteudo do banco na DropDown List -->
+<mat-form-field appearance="outline" color="accent">
+    <mat-label>Veiculo</mat-label>
+    <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo" >
+        <option value="" selected></option>
+        <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.placaVeiculo">
+            Placa: {{veiculo.placaVeiculo}}    - 
+            Modelo: {{veiculo.modeloVeiculo}}   - 
+            Linha: {{veiculo.numeroLinha}}  - 
+            EmpresaID: {{veiculo.empresaId}}
+        </option>
+    </select>
+</mat-form-field>
