--- a/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
+++ b/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
@@ -1,1 +1,128 @@
-<p>equipamento-read works!</p>
+<div>
+    <div class="botoes">
+        <div class="botoes1">
+
+            <!-- <button mat-raised-button (click)="listarTodosUsuarios()"> -->
+            <button mat-raised-button (click)="listarTodosEquipamentos()">
+                <mat-icon class="color-icon">list</mat-icon>
+                <span class="textButton"> Listar Equipamentos</span>
+            </button>
+
+            <button mat-raised-button (click)="navigateToNovoEquipamento()">
+                <mat-icon class="color-icon">developer_board</mat-icon>
+                <span class="textButton"> Novo Equipamento</span>
+            </button>
+
+        </div>
+        <div class="botoes2">
+            <!-- <button mat-raised-button (click)="listarUsuariosFiltro()"> -->
+            <button mat-raised-button (click)="listarVeiculosFiltro()">
+                <mat-icon class="color-icon">search</mat-icon>
+                <span class="textButtonFilter"> Filtrar</span>
+            </button>
+            <mat-form-field appearance="outline" color="accent">
+                <mat-label>Filtrar por Cód. Equipamento</mat-label>
+                <input matInput [(ngModel)]="filter" name="filter">
+            </mat-form-field>
+        </div>
+    </div>
+
+    <table mat-table [dataSource]="veiculos2.content" class="mat-elevation-z4">
+        <!-- id Column -->
+        <!-- <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>ID</th>
+            <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        </ng-container> -->
+
+        <!-- placaVeiculo Column -->
+        <ng-container matColumnDef="placaVeiculo">
+            <th mat-header-cell *matHeaderCellDef>Placa</th>
+        <td mat-cell *matCellDef="let row">{{row.placaVeiculo}}</td>
+        </ng-container>
+
+        <!-- modeloVeiculo Column -->
+        <ng-container matColumnDef="modeloVeiculo">
+            <th mat-header-cell *matHeaderCellDef>Modelo</th>
+            <td mat-cell *matCellDef="let row">{{row.modeloVeiculo}}</td>
+        </ng-container>
+
+        <!-- numeroLinha Column -->
+        <ng-container matColumnDef="numeroLinha">
+            <th mat-header-cell *matHeaderCellDef>Linha</th>
+        <td mat-cell *matCellDef="let row">{{row.numeroLinha}}</td>
+        </ng-container>
+
+        <!-- empresaId Column -->
+        <ng-container matColumnDef="empresaId">
+            <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
+            <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
+        </ng-container>
+
+        <!-- empresa Column -->
+        <!-- <ng-container matColumnDef="empresa">
+            <th mat-header-cell *matHeaderCellDef>Empresa</th>
+            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+        </ng-container> -->
+
+        <!-- totalLugares Column -->
+        <ng-container matColumnDef="totalLugares">
+            <th mat-header-cell *matHeaderCellDef>Total de Lugares</th>
+        <td mat-cell *matCellDef="let row">{{row.totalLugares}}</td>
+        </ng-container>
+
+        <!-- lugaresSentados Column -->
+        <ng-container matColumnDef="lugaresSentado">
+            <th mat-header-cell *matHeaderCellDef>Sentados</th>
+        <td mat-cell *matCellDef="let row">{{row.lugaresSentado}}</td>
+        </ng-container>
+
+        <!-- lugaresEmPe Column -->
+        <ng-container matColumnDef="lugaresEmPe">
+            <th mat-header-cell *matHeaderCellDef>Em Pé</th>
+        <td mat-cell *matCellDef="let row">{{row.lugaresEmPe}}</td>
+        </ng-container>
+
+        <!-- codEquipamento Column -->
+        <ng-container matColumnDef="codEquipamento">
+            <th mat-header-cell *matHeaderCellDef>Cód. Equip.</th>
+        <td mat-cell *matCellDef="let row">{{row.codEquipamento}}</td>
+        </ng-container>
+
+        <!-- Action Column -->
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Ações</th>
+            <td mat-cell *matCellDef="let row">
+                <a routerLink="/equipamentos/update/{{ row.id }}" class="update">
+                    <i class="material-icons">
+                        edit
+                    </i>
+                </a>
+                <a routerLink="/equipamentos/delete/{{ row.id }}" class="delete">
+                    <i class="material-icons">
+                        delete
+                    </i>
+                </a>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage"
+        [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
+
+</div>
+
+<!-- Exemplo de como inserir conteudo do banco na DropDown List -->
+<mat-form-field appearance="outline" color="accent">
+    <mat-label>Veiculos de todos usuários</mat-label>
+    <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo" >
+        <option value="" selected></option>
+        <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.placaVeiculo">
+            Placa: {{veiculo.placaVeiculo}}    - 
+            Modelo: {{veiculo.modeloVeiculo}}   - 
+            Linha: {{veiculo.numeroLinha}}  - 
+            EmpresaID: {{veiculo.empresaId}}
+        </option>
+    </select>
+</mat-form-field>
