--- a/src/app/views/manter-equipamentos/manter-equipamentos.component.css
+++ b/src/app/views/manter-equipamentos/manter-equipamentos.component.css
@@ -1,16 +1,15 @@
 .container{
     background-color: #555; 
-
 }
 .titulo {
     color: #fff;
     font-size: 20px;
     text-align: center;
-    padding: 25px;
+    padding: 2px;
+    margin: 0px;
 }
 
-@media only screen and (max-width: 819px) {
-    .titulo {
-        font-size: 15px;
-    }
+.body {
+    margin-left: 10px;
+    margin-right: 10px;
 }
