--- a/src/app/views/manter-equipamentos/manter-equipamentos.component.html
+++ b/src/app/views/manter-equipamentos/manter-equipamentos.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container">
-    <h1 class="titulo"> MANTER EQUIPAMENTOS</h1>
+    <h1 class="titulo">EQUIPAMENTOS</h1>
 </div>
 <div class="body">
     <app-equipamento-read></app-equipamento-read>
