--- a/src/app/components/equipamento/equipamento-create/equipamento-create.component.html
+++ b/src/app/components/equipamento/equipamento-create/equipamento-create.component.html
@@ -55,10 +55,10 @@
 
         <!-- Exemplo de como inserir conteudo do banco na DropDown List -->
         <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
-            <mat-label>Veiculos de todos usuários</mat-label>
+            <mat-label>Veiculos da empresa</mat-label>
             <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
                 <option value="" selected></option>
-                <option *ngFor="let veiculo of veiculos2.content" [value]="veiculo.placaVeiculo">
+                <option *ngFor="let veiculo of veiculosEmpresa.content" [value]="veiculo.placaVeiculo">
                     Placa: {{veiculo.placaVeiculo}} -
                     Modelo: {{veiculo.modeloVeiculo}} -
                     Linha: {{veiculo.numeroLinha}} -
