--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <table mat-table [dataSource]="usuarios.content" class="mat-elevation-z4">
+  <table mat-table [dataSource]="usuariosEmpresa.content" class="mat-elevation-z4">
     <!-- id Column -->
     <!-- <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
